fix: Login dialog text wrapping
After a recent Chrome update, labels for the inputs have started wrapping.
Didn't find a reason for the `wrap` rule, so I just removed it.

--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -132,7 +132,6 @@ button:not(:disabled) {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   flex-direction: row-reverse;
   position: relative;
 }
